--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,16 @@ body {
     padding: 40px 15px;
     text-align: center;
   }
+
+.wizard {
+  display: none;
+}
+
+.wizard.active{
+  display: block;
+}
+
+.actions {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
